Fixed h3 text-align

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 body {
-    background-color: black;
-    color: white;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background-color: black;
+  color: white;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
 #main-container {
@@ -16,6 +17,10 @@ h1 {
 
 h3 {
   align-self: center;
+}
+
+h2 {
+  text-align: center;
 }
 
 #button-container {
@@ -42,10 +47,10 @@ h3 {
 }
 
 button {
-    margin-top: 30px;
-    font-size: 2rem;
-    width: 190px;
-    height: auto;
-    padding: 6px;
-    border-radius: 7px;
+  margin-top: 30px;
+  font-size: 2rem;
+  width: 190px;
+  height: auto;
+  padding: 6px;
+  border-radius: 7px;
 }
